# ConstructerCss

./: Cargo.toml  build.sh  package-lock.json  setup.sh
.kiro/specs/bevm/: design.md  requirements.md  tasks.md
.kiro/specs/woznak/: design.md  requirements.md  tasks.md
constructer/: package-lock.json  package.json  tsconfig.json  webpack.config.js
constructer/example/: index.html  styles.css  styles.css.map  styles.scss
constructer/scss/: _effects.scss  _gradients.scss  _index.scss  _primitives.scss  _responsive.scss  _scene.scss  _textures.scss  _typography.scss
constructer/src/: index.ts  logger.ts
constructer/src/core/: animation.ts  events.ts  filters.ts  input.ts  morph.ts  path-builder.ts  scene.ts  scroll.ts  svg.ts  text-path.ts  timeline.ts
constructer/src/types/: index.ts
pkt/: Makefile  README.md  packages.json  pkt
pkt/scripts/: check_update.sh  detect_build.sh  install.sh  setup.sh  uninstall.sh
pkt/src/: pkt.c
src/: cli.rs  container.rs  main.rs  python.rs  storage.rs
