[package]
name = "dock"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

[[bin]]
name = "dock"
path = "src/main.rs"
